--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Sheng Slang</string>
     <string name="about">
-        <b>Sheng</b> is a Swahili-based cant, perhaps a mixed language or creole, originating among the urban underclass of Nairobi, Kenya, and influenced by many of the languages spoken there. While primarily a language of urban youths, it has spread across social classes and geographically to neighbouring Tanzania and Uganda.
+        <b>Sheng</b> is a Swahili-based cant\, perhaps a mixed language or creole, originating among the urban underclass of Nairobi, Kenya, and influenced by many of the languages spoken there. While primarily a language of urban youths, it has spread across social classes and geographically to neighbouring Tanzania and Uganda.
     </string>
     <string name="title2">
         History
@@ -19,6 +19,6 @@
         Although the grammar, syntax, and much of the vocabulary are drawn from Swahili, Sheng borrows from English and from the languages of various ethnic groups in Kenya, including Luhya, Gĩkũyũ, Luo and Kamba. Words are also borrowed from languages that are neither a local language nor English – such as the Sheng word morgen "morning" – a Sheng word used in some areas with a similar meaning in German.
     </string>
     <string name="grammer2">
-        Sheng vocabulary can vary significantly within Kenya's various subdivisions and the larger African Great Lakes region, and even between neighbourhoods in Nairobi. Many youth living in the capital often use the argot as their everyday mode of communication rather than Swahili or English.
+        Sheng vocabulary can vary significantly within Kenya\'s various subdivisions and the larger African Great Lakes region, and even between neighbourhoods in Nairobi. Many youth living in the capital often use the argot as their everyday mode of communication rather than Swahili or English.
     </string>
 </resources>
